# llm-sdk-chat

./: Cargo.toml  README.md  fxitures  res.txt  t.ts
src/: lib.rs
src/api/: chat_completion.rs  create_image.rs  embedding.rs  mod.rs  speech.rs  transcription.rs  whisper.rs
