[package]
name = "q-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest ={version= "0.11.22", features=["rustls-tls","json","gzip"], default-features=false}
anyhow="1"
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0.108"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread","macros"] }
