[package]
name = "q-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest ={version= "0.11.22", features=["rustls-tls","multipart","json","gzip"], default-features=false}
anyhow="1"
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0.108"
derive_builder = "0.12.0"
tracing = "0.1.40"
async-trait = "0.1.74"
schemars = "0.8.16"
bytes = "1.5.0"
strum = "0.25.0"
strum_macros = "0.25.3"
lazy_static = "1.4.0"

[dev-dependencies]
ctor = "0.2.5"
schemars = "0.8.16"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread","macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
